add clangformat support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,19 @@ include(cmake/thirdparties/boost.cmake)
 include(cmake/thirdparties/rangev3.cmake)
 
 add_subdirectory(src)
+
+
+find_program(ClangFormat clang-format)
+if(ClangFormat)
+    get_target_property(Srcs CheatSheet SOURCES)
+    get_target_property(Dir CheatSheet SOURCE_DIR)
+    foreach(Src ${Srcs})
+      list(APPEND Sources "${Dir}/${Src}")
+    endforeach()
+
+  add_custom_target(clangformat
+    COMMAND clang-format -style=file -i ${Sources}
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+endif()
+
+
