--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,5 @@
 add_executable(CheatSheet main.cpp views.cpp utils.h)
 target_link_libraries(CheatSheet PRIVATE Boost::boost Boost::unit_test_framework range-v3)
+
+add_test(NAME ViewTests
+  COMMAND $<TARGET_FILE:CheatSheet> --run_test=RangeV3ViewsTests/*)
